# DeepD3

./: .gitignore  README.md  requirements.txt  setup.py
deepd3/inference/: gui.py
deepd3/training/: generator.py  stream.py
docs/: BINARY_MASK_SUPPORT.md  BINARY_MASK_VISUAL_GUIDE.md  GUIDED_MERGING.md
transd3/: .gitignore  README.md  pyproject.toml
transd3/transd3/: __init__.py
transd3/transd3/configs/: finetune_seg.yaml  mae_2p.yaml  pretrain_mix.yaml
transd3/transd3/data/: __init__.py  datamodule.py
transd3/transd3/eval/: __init__.py  evaluate_mae.py  evaluate_seg.py  metrics.py  morphology.py
transd3/transd3/losses/: __init__.py  cldice.py  contrastive.py  focal_tversky.py  grad_matching.py
transd3/transd3/models/: __init__.py
transd3/transd3/models/denoise/: __init__.py  n2v.py
transd3/transd3/models/encoders/: __init__.py  conv_stem.py  vit_axial.py
transd3/transd3/models/mae/: __init__.py  mae_2p.py
transd3/transd3/models/seg/: __init__.py  heads.py  mask2former.py
transd3/transd3/scripts/: __init__.py  add_tiff_resolution.py  convert_deepd3_to_zarr.py  prepare_pseudolabels_musam.py
transd3/transd3/spine_data/: __init__.py  aug.py  datasets.py  utils_io.py
transd3/transd3/tools/: __init__.py  predict.py  visualize_mae_mix.py
transd3/transd3/train/: __init__.py  finetune_seg.py  pretrain_mae.py  pretrain_mix.py
