[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transd3"
version = "0.1.0"
description = "Two-photon spine and shaft modeling pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["neuroscience", "deep-learning", "segmentation"]
authors = [
  { name = "Callan", email = "callano@princeton.edu" }
]
dependencies = [
  "torch>=2.4.0",
  "torchvision>=0.19.0",
  "pytorch-lightning>=2.4.0",
  "monai[all]>=1.4.0",
  "zarr>=2.16.0",
  "h5py>=3.11.0",
  "tifffile>=2024.8.30",
  "einops>=0.8.0",
  "opencv-python>=4.9.0",
  "scikit-image>=0.24.0",
  "wandb>=0.17.0",
  "rich>=13.7.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pyyaml>=6.0.2",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "albumentations>=1.4.8",
  "timm>=0.9.16"
]

[project.optional-dependencies]
development = [
  "black>=24.4.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4", "Q"]
ignore = ["E203", "E501"]
